--- a/assignment2/config_LK.yml
+++ b/assignment2/config_LK.yml
@@ -1,5 +1,5 @@
 # Input path
-input_path: '\dataset\Forest_15_3b_Videvo.mov'
+input_path: '\dataset\slow_traffic_small.mp4'
 
 # Feature detector parameters
 max_corners: 100
