--- a/assignment2/config_HS.yml
+++ b/assignment2/config_HS.yml
@@ -1,5 +1,5 @@
 # Input path
-input_path: '/dataset/other-data/Urban2'
+input_path: '/dataset/Forest_15_3b_Videvo.mp4'
 
 # Horn-Schunck tuning parameters
 alpha: 10.0
@@ -7,5 +7,5 @@ num_iterations: 1
 epsilon: 0.01
 multichannel: false
 # Gaussian pyramid parameters
-num_levels: 1
+num_levels: 17
 pyramid_scale: 0.5
